feat(dal): finish document and category REST API, services and unit tests
- Add DTOs, mappers, services, and exception handling for Document and Category
- Update Controllers, Entities, and Repositories
- Add controller and service unit tests
- Update project dependencies in pom.xml and application config