@@ -1,24 +1,30 @@
 package com.dms.rest_api.controller;
 
-import com.dms.rest_api.entity.Category;
-import com.dms.rest_api.repository.CategoryRepository;
+import com.dms.rest_api.dto.CategoryRequestDto;
+import com.dms.rest_api.dto.CategoryResponseDto;
+import com.dms.rest_api.exception.ResourceNotFoundException;
+import com.dms.rest_api.service.CategoryService;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
-import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.BDDMockito.willDoNothing;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 @WebMvcTest(CategoryController.class)
 class CategoryControllerTest {
@@ -26,63 +32,97 @@ class CategoryControllerTest {
     @Autowired
     private MockMvc mockMvc;
 
-    @MockitoBean
-    private CategoryRepository categoryRepository;
-
     @Autowired
     private ObjectMapper objectMapper;
 
-    private Category sampleCategory;
-
-    @BeforeEach
-    void setUp() {
-        sampleCategory = Category.builder()
-                .id(1L)
-                .name("Contracts")
-                .build();
-    }
+    @MockBean
+    private CategoryService categoryService;
 
     @Test
-    @DisplayName("GET /api/categories - Should return all categories")
-    void getAllCategories_ShouldReturnList() throws Exception {
-        when(categoryRepository.findAll()).thenReturn(Arrays.asList(sampleCategory));
+    @DisplayName("GET /api/categories - Returns list of categories")
+    void getAllCategories_ReturnsOk() throws Exception {
+        CategoryResponseDto responseDto = CategoryResponseDto.builder()
+                .id(10L)
+                .name("Finance")
+                .build();
+
+        given(categoryService.findAll()).willReturn(List.of(responseDto));
 
         mockMvc.perform(get("/api/categories"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].name", is("Contracts")));
-
-        verify(categoryRepository, times(1)).findAll();
+                .andExpect(jsonPath("$[0].name").value("Finance"));
     }
 
     @Test
-    @DisplayName("POST /api/categories - Should create new category and return it")
-    void createCategory_ShouldReturnSavedCategory() throws Exception {
-        Category inputCategory = Category.builder().name("Invoices").build();
-        Category savedCategory = Category.builder().id(2L).name("Invoices").build();
+    @DisplayName("POST /api/categories - Creates category with valid DTO")
+    void createCategory_ValidPayload_ReturnsCreated() throws Exception {
+        CategoryRequestDto requestDto = new CategoryRequestDto();
+        requestDto.setName("Finance");
 
-        when(categoryRepository.save(any(Category.class))).thenReturn(savedCategory);
+        CategoryResponseDto responseDto = CategoryResponseDto.builder()
+                .id(10L)
+                .name("Finance")
+                .build();
+
+        given(categoryService.create(any(CategoryRequestDto.class))).willReturn(responseDto);
 
         mockMvc.perform(post("/api/categories")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(inputCategory)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(2)))
-                .andExpect(jsonPath("$.name", is("Invoices")));
-
-        verify(categoryRepository, times(1)).save(any(Category.class));
+                        .content(objectMapper.writeValueAsString(requestDto)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(10L));
     }
 
     @Test
-    @DisplayName("DELETE /api/categories/{id} - Should delete category when exists")
-    void deleteCategory_WhenExists_ShouldReturn204() throws Exception {
-        when(categoryRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(categoryRepository).deleteById(1L);
+    @DisplayName("PUT /api/categories/{id} - Updates category successfully")
+    void updateCategory_ValidPayload_ReturnsOk() throws Exception {
+        CategoryRequestDto requestDto = new CategoryRequestDto();
+        requestDto.setName("Updated Finance");
 
-        mockMvc.perform(delete("/api/categories/1"))
-                .andExpect(status().isNoContent());
+        CategoryResponseDto responseDto = CategoryResponseDto.builder()
+                .id(10L)
+                .name("Updated Finance")
+                .build();
 
-        verify(categoryRepository, times(1)).existsById(1L);
-        verify(categoryRepository, times(1)).deleteById(1L);
+        given(categoryService.update(eq(10L), any(CategoryRequestDto.class))).willReturn(responseDto);
+
+        mockMvc.perform(put("/api/categories/10")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(requestDto)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("Updated Finance"));
     }
+
+    @Test
+    @DisplayName("DELETE /api/categories/{id} - Deletes category successfully")
+    void deleteCategory_Success_ReturnsNoContent() throws Exception {
+        // Arrange
+        Long categoryId = 10L;
+        willDoNothing().given(categoryService).delete(categoryId);
+
+        // Act & Assert
+        mockMvc.perform(delete("/api/categories/{id}", categoryId))
+                .andExpect(status().isNoContent()); // Oder isOk(), je nach Controller-Implementierung
+
+        verify(categoryService, times(1)).delete(categoryId);
+    }
+
+    @Test
+    @DisplayName("GET /api/categories/{id} - Returns category when exists")
+    void getCategoryById_Success_ReturnsOk() throws Exception {
+        // Arrange
+        CategoryResponseDto responseDto = CategoryResponseDto.builder()
+                .id(10L)
+                .name("Finance")
+                .build();
+
+        given(categoryService.findById(10L)).willReturn(responseDto);
+
+        // Act & Assert
+        mockMvc.perform(get("/api/categories/10"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(10L))
+                .andExpect(jsonPath("$.name").value("Finance"));
+    }
+
 }
